test/fail_compilation/fail171.d

void main()
{
    const(int) x = 3;
    int* p = &x;
}
